Add options section

--- a/index.css
+++ b/index.css
@@ -182,3 +182,33 @@ body{
 	  border-top-right-radius: 10px;
 	border-bottom-right-radius: 10px;
   }
+  .promos{
+	  text-align: center;
+	  display: flex;
+	  box-shadow: rgba(0, 0, 0, 0.12)0px 4px 20px;
+	  align-items: center;
+	  justify-content: center;
+  }
+  .promo1{
+	-webkit-box-shadow: 2px 3px 13px 5px #FFF5D9; 
+	box-shadow: 2px 3px 34px 50px #FFF5D9;
+	margin: 50px;
+	padding: 40px;
+	
+  }
+  .more{
+
+	width: 200px;
+	  font-size: 15px;
+	  font-weight: bold;
+	  height: 40px;
+	  background-color:green;
+	  color:white;
+	  border-top-left-radius: 10px;
+	border-bottom: 10px;
+	border-top-right-radius: 10px;
+	border-bottom-right-radius: 10px;
+	border-bottom-left-radius: 10px;
+
+  }
+  
